1.support class inherit info